# Terrarium

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml
main/include/: adc.h  heating.h  web_server.h
main/spiffs/: index.html
main/src/: adc.cpp  heating.cpp  main.cpp  web_server.cpp
